--- a/public/css/upload.css
+++ b/public/css/upload.css
@@ -183,9 +183,12 @@ form[name='login'] input[type='submit'], form[name='register'] input[type='submi
 }
 
 #logo {
-    padding: 20px 0;
+    padding: 0;
 }
 
+#logo img {
+    height: 55px;
+}
 #main {
     margin: 10px 10px 0;
 }
